# TechnoPark-HW

./: .clang-format  CMakeLists.txt  README.md
examples/: CMakeLists.txt  LogSettings.cpp  LogSettings.h  client_for_epoll.cpp  echo.cpp  epoll_tcp_example.cpp  ex.cpp  http_example.cpp  log_example.cpp  process_example.cpp  shmem_example.cpp  tcp_client.cpp  tcp_server.cpp
include/: Logger.h
include/Logger/: BaseLogger.h  FileLogger.h  Logger.h  StderrLogger.h  StdoutLogger.h
include/Process/: Descriptor.h  Process.h
include/shmem/: CMakeLists.txt  Map.h  Shalloc.h
include/tcp/: Connection.h  EpollServer.h  Server.h
libs/: CMakeLists.txt
libs/BaseException/: CMakeLists.txt
libs/BaseException/include/: BaseException.h
libs/BaseException/src/: BaseException.cpp
libs/Coroutine/: CMakeLists.txt
libs/Coroutine/include/: Coroutine.h
libs/Coroutine/src/: Coroutine.cpp
libs/Descriptor/: CMakeLists.txt
libs/Descriptor/include/: Descriptor.h
libs/Descriptor/src/: Descriptor.cpp
libs/EpollTcp/: CMakeLists.txt
libs/EpollTcp/include/: EpollConnection.h  EpollServer.h
libs/EpollTcp/src/: EpollConnection.cpp  EpollServer.cpp
libs/HTTPFramework/: CMakeLists.txt
libs/HTTPFramework/include/: Connection.h  Epoll.h  HttpRequest.h  HttpResponse.h  Server.h
libs/HTTPFramework/src/: Connection.cpp  Epoll.cpp  HttpRequest.cpp  HttpResponse.cpp  Server.cpp
libs/Logger/: CMakeLists.txt
libs/Logger/include/: BaseLogger.h  FileLogger.h  Logger.h  StderrLogger.h  StdoutLogger.h
libs/Logger/src/: BaseLogger.cpp  FileLogger.cpp  Logger.cpp  StderrLogger.cpp  StdoutLogger.cpp
libs/Process/: CMakeLists.txt
libs/Process/include/: Process.h
libs/Process/src/: Process.cpp
libs/Shmem/: CMakeLists.txt
libs/Shmem/include/: Map.h  Shalloc.h
libs/Tcp/: CMakeLists.txt
libs/Tcp/include/: Connection.h  Server.h
libs/Tcp/src/: Connection.cpp  Server.cpp
src/: Logger.cpp  Process.cpp
src/Logger/: BaseLogger.cpp  CMakeLists.txt  FileLogger.cpp  Logger.cpp  StderrLogger.cpp  StdoutLogger.cpp
src/Process/: CMakeLists.txt  Descriptor.cpp  Process.cpp
src/tcp/: CMakeLists.txt  Connection.cpp  EpollServer.cpp  Server.cpp
